支持jsx语法,支持事件,添加生命周期

--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
         [
             "transform-react-jsx",
             {
-                "pragma": "React.createElement"
+                "pragma": "ReactScratch.createElement"
             }
         ]
     ]
